# open-cognition

./: .env.example  .gitignore  README.md  SKILL.md  docker-compose.yml  main.py  pyproject.toml  run_mcp.py
.github/workflows/: create-tag.yml  publish.yml
docs/: api.md  architecture.md  concepts.md  mcp-tools.md  sm2.md
migrations/: 001_create_tables_down.surrealql  002_create_indexes.surrealql  003_create_relations.surrealql  004_create_session_log.surrealql  005_create_doubt.surrealql  005_create_doubt_down.surrealql
src/open_cognition/: cli.py  config.py  main.py  utils.py
src/open_cognition/frontend/: routes.py
src/open_cognition/frontend/templates/: artifacts.html  base.html  dashboard.html  doubt_new.html  doubts.html  (+6 more)
src/open_cognition/mcp/: server.py
src/open_cognition/migrations/: 001_create_tables.surrealql  002_create_indexes_down.surrealql  003_create_relations.surrealql  003_create_relations_down.surrealql  004_create_session_log_down.surrealql
src/open_cognition/models/: artifact.py  doubt.py  flashcard.py  resource.py  review.py  session_log.py  topic.py
src/open_cognition/repositories/: artifact_repo.py  doubt_repo.py  flashcard_repo.py  resource_repo.py  review_repo.py  session_log_repo.py  topic_repo.py
src/open_cognition/routes/: artifact_routes.py  doubt_routes.py  flashcard_routes.py  resource_routes.py  topic_routes.py
src/open_cognition/services/: artifact_service.py  doubt_service.py  flashcard_service.py  resource_service.py  review_service.py  session_log_service.py  sm2_service.py  topic_service.py
tests/: test_sm2.py
(+7 files in other folders)
